Argocd/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # 资源名字
  name: argocd-server
  # 命名空间
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/attributes.request.size_limit: '10485760'  # 设置上传数据大小为 10MB 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
spec:
  ingressClassName: frasers-nglps
  rules:
  # argocd的访问域名
  - host: 【域名】
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 8080
        # kubectl edit cm -n argocd argocd-cmd-params-cm 下的data配置是/argocd
        path: /argocd
        pathType: Prefix
